--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
                                         <ul>
                                             <li><a href="team-2.html">Our Team</a></li>
                                             <li><a href="contact.html">Work with Us</a></li>
+                                            <li><a href="affiliateprogram.html">Affiliate Programme</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -91,8 +92,6 @@
                                                     <li><a href="homecarefaq.html">FAQ</a></li>
                                                     <li><a href="homecarepricing.html">Pricing</a></li>
                                                     <li><a href="qualityassurance.html">Quality Assurance</a></li>
-                                                    <!-- <li><a href="careers.html">Careers</a></li> -->
-                                                    <!-- <li><a href="partnership.html">Partnership</a></li> -->
                                                     <li><a href="emergency.html">Emergency Care</a></li>
                                                 </ul>
                                             </li>
@@ -219,7 +218,7 @@
                     <div class="text-column col-xl-6 col-lg-12 col-md-12 col-sm-12">
                         <div class="inner">
                             <div class="sec-title">
-                                <h4>WE SHAPE THE PERFECT SOLUTIONS.<span class="dot">?</span></h4>
+                                <h4>WE SHAPE THE PERFECT SOLUTIONS<span class="dot">.</span></h4>
                                 <div class="upper-text">At Excelsia Health Travels, we are dedicated to providing exceptional medical and birth tourism services tailored to meet your unique needs. Our mission is to ensure a seamless, stress-free experience for our clients, from the moment you decide to travel for care to the time you return home.</div>
                                 <div class="upper-text">With a team of experienced professionals and a network of world-class healthcare providers, we are committed to delivering personalized care, ethical guidance, and 24/7 support every step of the way.</div>
                             </div>
@@ -254,7 +253,7 @@
                     <div class="title-block col-xl-6 col-lg-12 col-md-12 col-sm-12">
                         <div class="inner">
                             <div class="sec-title">
-                                <h2>We Shape the Perfect <br>Solutions<span class="dot">.</span></h2>
+                                <h2>What We Offer<span class="dot">.</span></h2>
                                 <div class="lower-text">We are committed to providing our customers with exceptional
                                     service while offering our employees the best training.</div>
                             </div>
@@ -352,8 +351,8 @@
 
                     <ul class="tab-btns tab-buttons clearfix">
                         <li data-tab="#tab-1" class="tab-btn active-btn"><span>Why Excelsia Health Travels?</span></li>
-                        <!-- <li data-tab="#tab-2" class="tab-btn"><span>Our Vision</span></li>
-                        <li data-tab="#tab-3" class="tab-btn"><span>Our Mission</span></li> -->
+                        <li data-tab="#tab-2" class="tab-btn"><span>Get Started Today</span></li>
+                        <!-- <li data-tab="#tab-3" class="tab-btn"><span>Our Mission</span></li> -->
                     </ul>
 
                     <div class="tabs-content">
@@ -385,7 +384,7 @@
                             </div>
                         </div>
 
-                        <!-- <div class="tab" id="tab-2">
+                        <div class="tab" id="tab-2">
                             <div class="row clearfix">
                                 <div class="image-col col-lg-5 col-md-6 col-sm-12">
                                     <div class="inner">
@@ -398,8 +397,14 @@
                                     <div class="inner">
                                         <div class="content">
                                             <div class="text">
-                                                <p>Our vision is to be Nigeria’s leading home care service, empowering individuals to maintain their independence while receiving top-notch care in the comfort of their homes. </p>
-                                                <p>We aim to set new standards in domiciliary care services in Nigeria, ensuring that every client’s needs are met with personalised, compassionate care.</p>
+                                                <p>Take the first step toward a stress-free medical or birth tourism experience. <a href="contact-2.html">Contact us</a> today to schedule a consultation:</p>
+                                                <ul>
+                                                    <li><strong>Phone:</strong> +234(0)9059735426, +234(0)901 841 0770</li>
+                                                    <li><strong>Email:</strong> <a href="mailto:info@excelsiahealth.net">info@excelsiahealth.net</a></li>
+                                                    <li><strong>WhatsApp:</strong> +2347069741720</li>
+                                                    <li><strong>Contact Form:</strong> <a href="contact-2.html">Click here</a></li>
+                                                </ul>
+                                                <p>Let Excelsia Health Travels guide you on your journey to better health and well-being.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -407,7 +412,7 @@
                             </div>
                         </div>
 
-                        <div class="tab" id="tab-3">
+                        <!-- <div class="tab" id="tab-3">
                             <div class="row clearfix">
                                 <div class="image-col col-lg-5 col-md-6 col-sm-12">
                                     <div class="inner">
@@ -732,7 +737,7 @@
                                     <div class="logo">
                                         <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
-                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                     <ul class="social-links clearfix">
                                         <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
                                         <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
