--- a/index-2-one-page.html
+++ b/index-2-one-page.html
@@ -2503,7 +2503,7 @@
                                     <div class="logo">
                                         <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
-                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                     <ul class="social-links clearfix">
                                         <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
                                         <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
