--- a/services.html
+++ b/services.html
@@ -72,6 +72,7 @@
                                         <ul>
                                             <li><a href="team-2.html">Our Team</a></li>
                                             <li><a href="contact.html">Work with Us</a></li>
+                                            <li><a href="affiliateprogram.html">Affiliate Programme</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -92,8 +93,6 @@
                                                     <li><a href="homecarefaq.html">FAQ</a></li>
                                                     <li><a href="homecarepricing.html">Pricing</a></li>
                                                     <li><a href="qualityassurance.html">Quality Assurance</a></li>
-                                                    <!-- <li><a href="careers.html">Careers</a></li> -->
-                                                    <!-- <li><a href="partnership.html">Partnership</a></li> -->
                                                     <li><a href="emergency.html">Emergency Care</a></li>
                                                 </ul>
                                             </li>
@@ -226,10 +225,10 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-responsive"></span></div>
-                            <h6><a href="homecare-nigeria.html">Homecare Nigeria: Home Health and Social Care Services</a></h6>
+                            <h6>Homecare Nigeria: Home Health and Social Care Services</h6>
                             <div class="text">Our Homecare Nigeria division is designed to bring professional healthcare and social care services directly to your home. Whether you need skilled nursing, rehabilitation, or personal care assistance, we ensure that you or your loved ones receive compassionate, high-quality care in a familiar and comfortable environment.</div>
                             <div class="link-box">
-                                <a class="theme-btn btn-style-one" href="homecare-nigeria.html">
+                                <a class="theme-btn btn-style-one" href="homecareService.html">
                                     <i class="btn-curve"></i>
                                     <span class="btn-title">Learn more about Homecare Nigeria</span>
                                 </a>
@@ -241,10 +240,10 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-computer"></span></div>
-                            <h6><a href="health-travels.html">Excelsia Health Travels: Medical and Birth Tourism</a></h6>
+                            <h6>Excelsia Health Travels: Medical and Birth Tourism</h6>
                             <div class="text">Through Excelsia Health Travels, we provide seamless medical and birth tourism services, connecting clients to world-class healthcare facilities and specialists across the globe. Whether you are seeking advanced medical treatments or planning a safe and comfortable birth experience abroad, we handle every detail to ensure a stress-free journey.</div>
                             <div class="link-box">
-                                <a class="theme-btn btn-style-one" href="health-travels.html">
+                                <a class="theme-btn btn-style-one" href="about.html">
                                     <i class="btn-curve"></i>
                                     <span class="btn-title">Learn more about Excelsia Health Travels</span>
                                 </a>
@@ -339,12 +338,12 @@
                                     <div class="logo">
                                         <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
-                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                     <ul class="social-links clearfix">
-                                        <li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
-                                        <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                                        <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-                                        <li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
+                                        <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
+                                        <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
+                                        <li><a href="https://www.instagram.com/ExcelsiaHealth/"><span class="fab fa-instagram"></span></a></li>
+                                        <li><a href="https://ng.linkedin.com/company/excelsiahealth"><span class="fab fa-linkedin"></span></a></li>
                                     </ul>
                                 </div>
                             </div>
