--- a/carer.html
+++ b/carer.html
@@ -36,6 +36,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+
+    <!-- Custom CSS for Filter Input -->
+    <style>
+        .filter-container {
+            margin-bottom: 20px;
+        }
+
+        #filterInput {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .team-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px; /* Space between cards */
+        }
+
+        .team-card-three {
+            flex: 1 1 calc(33.333% - 20px); /* 3 cards per row with gap */
+            box-sizing: border-box;
+        }
+
+        @media (max-width: 992px) {
+            .team-card-three {
+                flex: 1 1 calc(50% - 20px); /* 2 cards per row on tablets */
+            }
+        }
+
+        @media (max-width: 768px) {
+            .team-card-three {
+                flex: 1 1 100%; /* 1 card per row on mobile */
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -72,6 +110,7 @@
                                         <ul>
                                             <li><a href="team-2.html">Our Team</a></li>
                                             <li><a href="contact.html">Work with Us</a></li>
+                                            <li><a href="affiliateprogram.html">Affiliate Programme</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -92,8 +131,6 @@
                                                     <li><a href="homecarefaq.html">FAQ</a></li>
                                                     <li><a href="homecarepricing.html">Pricing</a></li>
                                                     <li><a href="qualityassurance.html">Quality Assurance</a></li>
-                                                    <!-- <li><a href="careers.html">Careers</a></li> -->
-                                                    <!-- <li><a href="partnership.html">Partnership</a></li> -->
                                                     <li><a href="emergency.html">Emergency Care</a></li>
                                                 </ul>
                                             </li>
@@ -138,20 +175,15 @@
 
         <!--Mobile Menu-->
         <div class="side-menu__block">
-
-
             <div class="side-menu__block-overlay custom-cursor__overlay">
                 <div class="cursor"></div>
                 <div class="cursor-follower"></div>
             </div><!-- /.side-menu__block-overlay -->
             <div class="side-menu__block-inner ">
                 <div class="side-menu__top justify-content-end">
-
                     <a href="#" class="side-menu__toggler side-menu__close-btn"><img src="images/icons/close-1-1.png"
                             alt=""></a>
                 </div><!-- /.side-menu__top -->
-
-
                 <nav class="mobile-nav__container">
                     <!-- content is loading via js -->
                 </nav>
@@ -161,9 +193,9 @@
                     <p><a href="mailto:info@excelsiahealth.net">info@excelsiahealth.net</a> <br> <a href="tel: +234(0)9059735426"> +234(0)9059735426</a></p>
                     <div class="side-menu__social">
                         <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
-                                        <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
-                                        <li><a href="https://www.instagram.com/ExcelsiaHealth/"><span class="fab fa-instagram"></span></a></li>
-                                        <li><a href="https://ng.linkedin.com/company/excelsiahealth"><span class="fab fa-linkedin"></span></a></li>
+                        <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
+                        <li><a href="https://www.instagram.com/ExcelsiaHealth/"><span class="fab fa-instagram"></span></a></li>
+                        <li><a href="https://ng.linkedin.com/company/excelsiahealth"><span class="fab fa-linkedin"></span></a></li>
                     </div>
                 </div><!-- /.side-menu__content -->
             </div><!-- /.side-menu__block-inner -->
@@ -183,35 +215,60 @@
             </div><!-- /.search-popup__inner -->
         </div><!-- /.search-popup -->
 
-        <!-- Banner Section -->
-        <section class="page-banner">
-             <div class="image-layer" style="background-image:url(images/pageTitle.jpg);"></div>
-            <div class="shape-1"></div>
-            <div class="shape-2"></div>
-            <div class="banner-inner">
-                <div class="auto-container">
-                    <div class="inner-container clearfix">
-                        <h1>Find Carers</h1>
-                        <div class="page-nav">
-                            <ul class="bread-crumb clearfix">
-                                <li><a href="index.html">Home</a></li>
-                                <!-- <li><a href="about-2.html">About</a></li> -->
-                                <li class="active">Find Carers</li>
-                            </ul>
+        <section class="featured-section featured-section__about-two">
+            <div class="auto-container">
+                <div class="row clearfix">
+                    <!--Left Column-->
+                    <div class="left-col col-lg-4 col-md-12 col-sm-12">
+                        <div class="inner wow fadeInLeft animated" data-wow-delay="0ms" data-wow-duration="1500ms"
+                            style="visibility: visible; animation-duration: 1500ms; animation-delay: 0ms; animation-name: fadeInLeft;">
+                            <div class="image-box"><img src="images/aboutImg.jpg" alt=""></div>
+                        </div>
+                    </div>
+                    <!--Right Column-->
+                    <div class="right-col col-lg-8 col-md-12 col-sm-12">
+                        <div class="inner">
+                            <div class="sec-title">
+                                <h2><span class="dot">200</span> carers available<span class="dot">.</span></h2>
+                                <div class="lower-text">Everyday our carers support families and individuals cope with life’s challenges, from tasks such as grocery shopping or ironing, to some of the most demanding and emotional circumstances that life throws at us.</div>
+                                <hr>
+                                <div class="">
+                                    <h6>Need help finding a live in carer?</h6>
+                                    <div class="link-box">
+                                        <a class="theme-btn btn-style-one" href="contact-2.html">
+                                            <i class="btn-curve"></i>
+                                            <span class="btn-title">Contact us</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!--End Banner Section -->
 
-        <section class="team-three">
+        <!-- Team Section with Filter -->
+        <section class="carer-team">
             <div class="auto-container">
-                <div class="row" id="team-members">
-                    <!-- Team members will be inserted here by JavaScript -->
+                <div class="row">
+                    <!-- Filter Input Column -->
+                    <div class="col-lg-3 col-md-12 col-sm-12">
+                        <div class="filter-container">
+                            <input type="text" id="filterInput" placeholder="Search by name or position..." class="form-control">
+                        </div>
+                    </div>
+
+                    <!-- Team Members Column -->
+                    <div class="col-lg-9 col-md-12 col-sm-12">
+                        <div class="team-container" id="team-members">
+                            <!-- Team members will be inserted here by JavaScript -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+
         <!-- Main Footer -->
         <footer class="main-footer normal-padding">
             <div class="auto-container">
@@ -226,7 +283,7 @@
                                     <div class="logo">
                                         <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
-                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                     <ul class="social-links clearfix">
                                         <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
                                         <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
@@ -290,33 +347,9 @@
                                                 href="mailto:info@excelsiahealth.net">info@excelsiahealth.net</a></li>
                                     </ul>
                                 </div>
-                                
                             </div>
                         </div>
-
-                        <!--Column-->
-                        <!-- <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
-                            <div class="footer-widget newsletter-widget">
-                                <div class="widget-content">
-                                    <h6>Newsletter</h6>
-                                    <div class="newsletter-form">
-                                        <form method="post" action="contact.html">
-                                            <div class="form-group clearfix">
-                                                <input type="email" name="email" value="" placeholder="Email Address"
-                                                    required="">
-                                                <button type="submit" class="theme-btn"><span
-                                                        class="fa fa-envelope"></span></button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="text">Sign up for our latest news & articles. We won’t give you spam
-                                        mails.</div>
-                                </div>
-                            </div>
-                        </div> -->
-
                     </div>
-
                 </div>
             </div>
 
@@ -328,16 +361,13 @@
                     </div>
                 </div>
             </div>
-
         </footer>
-
     </div>
     <!--End pagewrapper-->
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
-
-
+    <!-- Scripts -->
     <script src="js/jquery.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -355,40 +385,54 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/custom-script.js"></script>
 
-
-    <script src="js/lang.js"></script>
-    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <script src="js/color-switcher.js"></script>
-
+    <!-- Custom Script for Filtering -->
     <script>
         document.addEventListener("DOMContentLoaded", function() {
+            const teamContainer = document.getElementById('team-members');
+            const filterInput = document.getElementById('filterInput');
+            let teamMembers = [];
+
+            // Fetch team data
             fetch('team.json')
                 .then(response => response.json())
                 .then(data => {
-                    const teamContainer = document.getElementById('team-members');
-                    data.forEach(member => {
-                        const memberHTML = `
-                            <div class="col-md-6 col-lg-3">
-                                <div class="team-card-three">
-                                    <div class="team-card-three__inner">
-                                        <div class="team-card-three__image">
-                                            <img src="${member.image}" alt="${member.name}">
-                                        </div>
-                                        <div class="team-card-three__content">
-                                            <h5 class="team-card-three__name"><a href="${member.link}">${member.name}</a></h5>
-                                            <div class="team-card-three__designation">${member.position}</div>
-                                        </div>
+                    teamMembers = data;
+                    renderTeamMembers(teamMembers);
+                })
+                .catch(error => console.error('Error fetching team data:', error));
+
+            // Function to render team members
+            function renderTeamMembers(members) {
+                teamContainer.innerHTML = ''; // Clear existing content
+                members.forEach(member => {
+                    const memberHTML = `
+                        <div class="col-md-6 col-lg-2">
+                            <div class="team-card-three">
+                                <div class="team-card-three__inner">
+                                    <div class="team-card-three__image">
+                                        <img src="${member.image}" alt="${member.name}">
+                                    </div>
+                                    <div class="team-card-three__content">
+                                        <h5 class="team-card-three__name"><a href="${member.link}">${member.name}</a></h5>
+                                        <div class="team-card-three__designation">${member.position}</div>
                                     </div>
                                 </div>
                             </div>
-                        `;
-                        teamContainer.innerHTML += memberHTML;
-                    });
-                })
-                .catch(error => console.error('Error fetching team data:', error));
+                        </div>
+                    `;
+                    teamContainer.innerHTML += memberHTML;
+                });
+            }
+
+            // Add event listener for filter input
+            filterInput.addEventListener('input', function() {
+                const filterText = filterInput.value.toLowerCase();
+                const filteredMembers = teamMembers.filter(member => {
+                    return member.name.toLowerCase().includes(filterText) || member.position.toLowerCase().includes(filterText);
+                });
+                renderTeamMembers(filteredMembers);
+            });
         });
     </script>
-
 </body>
-
 </html>
