--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,7 @@
                                         <ul>
                                             <li><a href="team-2.html">Our Team</a></li>
                                             <li><a href="contact.html">Work with Us</a></li>
+                                            <li><a href="affiliateprogram.html">Affiliate Programme</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -92,8 +93,6 @@
                                                     <li><a href="homecarefaq.html">FAQ</a></li>
                                                     <li><a href="homecarepricing.html">Pricing</a></li>
                                                     <li><a href="qualityassurance.html">Quality Assurance</a></li>
-                                                    <!-- <li><a href="careers.html">Careers</a></li> -->
-                                                    <!-- <li><a href="partnership.html">Partnership</a></li> -->
                                                     <li><a href="emergency.html">Emergency Care</a></li>
                                                 </ul>
                                             </li>
@@ -213,30 +212,34 @@
                 <div class="form-box">
                     <div class="sec-title">
                         <h2>Join Our Team at Excelsia Health<span class="dot">.</span></h2>
+                        <p>Thank you for your interest in working with Excelsia Health. We're always looking for talented, compassionate individuals to join our team and help us deliver exceptional care services.</p>
                     </div>
                     <div class="default-form">
                         <form method="post" action="sendemail.php" id="contact-form">
                             <div class="row clearfix">
                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                     <div class="field-inner">
-                                        <input type="text" name="username" value="" placeholder="Your Name *" required="">
+                                        <label for="">Name *</label>
+                                        <input type="text" name="username" value="" placeholder="Your Name" required="">
                                     </div>
                                 </div>
                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                     <div class="field-inner">
-                                        <input type="email" name="email" value="" placeholder="Email Address *"
+                                        <label for="">Email *</label>
+                                        <input type="email" name="email" value="" placeholder="Email Address"
                                             required="">
                                     </div>
                                 </div>
                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                    <div class="field-inner">
-                                        <input type="text" name="phone" value="" placeholder="Phone Number *" required="">
+                                    <div class="field-inner">                                        <label for="">Phone Number *</label>
+                                        <input type="text" name="phone" value="" placeholder="Phone Number" required="">
                                     </div>
                                 </div>
                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                     <div class="field-inner">
+                                        <label for="">Position You are interested in *</label>
                                         <select name="service" required="">
-                                            <option value="" disabled selected>Position you are Interested in *</option>
+                                            <option value="" disabled selected>Position you are Interested in</option>
                                             <option value="home_care">Registered Nurse</option>
                                             <option value="medical_tourism">Caregiver</option>
                                             <option value="birth_tourism">Customer Service Specialist</option>
@@ -248,8 +251,9 @@
                                 </div>
                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                     <div class="field-inner">
+                                        <label for="">Select Experience Level *</label>
                                         <select name="service" required="">
-                                            <option value="" disabled selected>Select Experience Level *</option>
+                                            <option value="" disabled selected>Select Experience Level</option>
                                             <option value="home_care">Less than 1 year</option>
                                             <option value="medical_tourism">1 - 3 years</option>
                                             <option value="birth_tourism">3 - 5 years</option>
@@ -260,8 +264,9 @@
                                 </div>
                                 <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                     <div class="field-inner">
+                                        <label for="">Select a field *</label>
                                         <select name="field" required>
-                                            <option value="" disabled selected>Select a field *</option>
+                                            <option value="" disabled selected>Select a field</option>
                                             <option value="home_care">Home Care</option>
                                             <option value="medical_tourism">Medical Tourism</option>
                                             <option value="birth_tourism">Birth Tourism</option>
@@ -276,12 +281,14 @@
 
                                 <div class="form-group col-lg-12 col-md-12 col-sm-12">
                                     <div class="field-inner">
-                                        <input type="file" name="file" value="" placeholder="Upload your CV (PDF or Word format)" required="">
+                                        <label for="">Upload your CV (PDF or Word format) *</label>
+                                        <input type="file" name="file" value="" required="">
                                     </div>
                                 </div>
                                 <div class="form-group col-lg-12 col-md-12 col-sm-12">
                                     <div class="field-inner">
-                                        <textarea name="message" placeholder="Cover Letter or Additional Information *" required=""></textarea>
+                                        <label for="">Cover Letter or Additional Information *</label>
+                                        <textarea name="message" placeholder="Tell us why you're interested in joing Excelsia Health and what makes you a great fir for our team" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group col-lg-12 col-md-12 col-sm-12">
@@ -311,7 +318,7 @@
                                     <div class="logo">
                                         <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
-                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                     <ul class="social-links clearfix">
                                         <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
                                         <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
