--- a/live-in.html
+++ b/live-in.html
@@ -72,6 +72,7 @@
                                         <ul>
                                             <li><a href="team-2.html">Our Team</a></li>
                                             <li><a href="contact.html">Work with Us</a></li>
+                                            <li><a href="affiliateprogram.html">Affiliate Programme</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -92,8 +93,6 @@
                                                     <li><a href="homecarefaq.html">FAQ</a></li>
                                                     <li><a href="homecarepricing.html">Pricing</a></li>
                                                     <li><a href="qualityassurance.html">Quality Assurance</a></li>
-                                                    <!-- <li><a href="careers.html">Careers</a></li> -->
-                                                    <!-- <li><a href="partnership.html">Partnership</a></li> -->
                                                     <li><a href="emergency.html">Emergency Care</a></li>
                                                 </ul>
                                             </li>
@@ -246,6 +245,7 @@
                                     <li><strong>Maintain Independence:</strong> Continue to enjoy your favourite activities and maintain control over your daily life, with support whenever needed.</li>
                                 </ul>
                                 <p>Live-in care in Nigeria allows individuals to maintain independence while receiving personalised care services that address their specific needs. <a href="contact-2.html">Get in touch</a> with us today to explore the benefits of live-in care and how it can help you or your loved one.</p>
+                                <p>Contact us today to schedule a consultation and discover how our Live-In care can support you and your loved ones. <a href="mailto:homecare@excelsiahealth.net">Email us</a> or call us at <a href="tel:+234(0)9059735426">+234(0)9059735426 </a> or <a href="tel:+234(0)9018410770">+234(0)9018410770</a>.</p>
                             </div>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
                                     <div class="logo">
                                         <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
-                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                    <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                     <ul class="social-links clearfix">
                                         <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
                                         <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
