--- a/partners.html
+++ b/partners.html
@@ -64,6 +64,7 @@
                                         <ul>
                                             <li><a href="team-2.html">Our Team</a></li>
                                             <li><a href="contact.html">Work with Us</a></li>
+                                            <li><a href="affiliateprogram.html">Affiliate Programme</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -84,8 +85,6 @@
                                                     <li><a href="homecarefaq.html">FAQ</a></li>
                                                     <li><a href="homecarepricing.html">Pricing</a></li>
                                                     <li><a href="qualityassurance.html">Quality Assurance</a></li>
-                                                    <!-- <li><a href="careers.html">Careers</a></li> -->
-                                                    <!-- <li><a href="partnership.html">Partnership</a></li> -->
                                                     <li><a href="emergency.html">Emergency Care</a></li>
                                                 </ul>
                                             </li>
@@ -375,7 +374,7 @@
             <div class="auto-container clearfix">
                 <h2>Want to Partner with Us?</h2>
                 <div class="link-box">
-                    <a class="theme-btn btn-style-two" href="contact-2.html">
+                    <a class="theme-btn btn-style-two" href="partnerwithus.html">
                         <i class="btn-curve"></i>
                         <span class="btn-title">Send Us a Message</span>
                     </a>
@@ -397,7 +396,7 @@
                                 <div class="logo">
                                     <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                 </div>
-                                <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
+                                <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                 <ul class="social-links clearfix">
                                     <li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
                                     <li><a href="#"><span class="fab fa-twitter"></span></a></li>
