--- a/usa copy.html
+++ b/usa copy.html
@@ -81,7 +81,7 @@
                                         <a href="partners.html">Partners</a>
                                         <ul>
                                             <li class="dropdown"><a href="partners.html">Our Partners</a></li>
-                                            <li><a href="contact-2.html">Partner With Us</a></li>
+                                            <li><a href="partnerwithus.html">Partner With Us</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown"><a href="">Services</a>
