--- a/homecarefaq.html
+++ b/homecarefaq.html
@@ -553,7 +553,7 @@
                                         <div class="col-md-4 col-sm-12">
                                             <ul>
                                                 <li><a href="about-2.html">About</a></li>
-                                                <li><a href="services.html">HomeCare Nigeria</a></li>
+                                                <li><a href="homecareservice.html">HomeCare Nigeria</a></li>
                                                 <li><a href="domiciliary.html">Domiciliary Care</a></li>
                                                 <li><a href="specialist.html">Specialist Care</a></li>
                                                 <li><a href="independent.html">Independent Care</a></li>
@@ -574,9 +574,9 @@
                                             <ul>
                                                 <li><a href="contact-2.html">Contact Us</a></li>
                                                 <li><a href="blog-grid.html">Blog</a></li>
-                                                <li><a href="#">Calculator</a></li>
-                                                <li><a href="contact-2.html">Partner With Us</a></li>
-                                                <li><a href="contact-2.html">Work With Us</a></li>
+                                                <li><a href="calculator.html">Calculator</a></li>
+                                                <li><a href="partnerwithus.html">Partner With Us</a></li>
+                                                <li><a href="contact.html">Work With Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
