--- a/partners.html
+++ b/partners.html
@@ -398,10 +398,10 @@
                                 </div>
                                 <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC:1421192</div>
                                 <ul class="social-links clearfix">
-                                    <li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
-                                    <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-                                    <li><a href="#"><span class="fab fa-pinterest-p"></span></a></li>
+                                    <li><a href="https://www.facebook.com/excelsiahealth/"><span class="fab fa-facebook-square"></span></a></li>
+                                    <li><a href="https://x.com/ExcelsiaHealth"><span class="fab fa-twitter"></span></a></li>
+                                    <li><a href="https://www.instagram.com/ExcelsiaHealth/"><span class="fab fa-instagram"></span></a></li>
+                                    <li><a href="https://ng.linkedin.com/company/excelsiahealth"><span class="fab fa-linkedin"></span></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -416,7 +416,7 @@
                                     <div class="col-md-4 col-sm-12">
                                         <ul>
                                             <li><a href="about-2.html">About</a></li>
-                                            <li><a href="services.html">HomeCare Nigeria</a></li>
+                                            <li><a href="homecareservice.html">HomeCare Nigeria</a></li>
                                             <li><a href="domiciliary.html">Domiciliary Care</a></li>
                                             <li><a href="specialist.html">Specialist Care</a></li>
                                             <li><a href="independent.html">Independent Care</a></li>
@@ -437,9 +437,9 @@
                                         <ul>
                                             <li><a href="contact-2.html">Contact Us</a></li>
                                             <li><a href="blog-grid.html">Blog</a></li>
-                                            <li><a href="#">Calculator</a></li>
-                                            <li><a href="contact-2.html">Partner With Us</a></li>
-                                            <li><a href="contact-2.html">Work With Us</a></li>
+                                            <li><a href="calculator.html">Calculator</a></li>
+                                            <li><a href="partnerwithus.html">Partner With Us</a></li>
+                                            <li><a href="contact.html">Work With Us</a></li>
                                         </ul>
                                     </div>
                                 </div>
